syntax = "proto3";

option csharp_namespace = "BE_LoansApp.Protos";


service LoanService {
	rpc GetLoan(LoanRequest) returns  (LoanResponse);
	rpc ReturnLoan (Loan) returns (Mensaje);
}

message Mensaje{
	string respuesta = 1;
}

message LoanRequest{
		string nombre =1;
}

message LoanResponse {
	int32 precio = 1;
	string agenteSeguro = 2;
}

message Loan {
	int32 id = 1;
}


